ready for deployment